working "incorrect" pipleline for npy monthly pretrain as batch is (744, 17, 128, 256); updates to data inspection script; use default var order

--- a/jobs/tartanair_og_bench.yaml
+++ b/jobs/tartanair_og_bench.yaml
@@ -24,7 +24,7 @@ storage:
   custom_output:
     storage_account_name: ramadaanaml
     container_name: mmvmae-benchmark-results
-    mount_dir: /mnt/data_output
+    # mount_dir: /mnt/custom_output
     is_output: True
 
 search:
