--- a/jobs/climate_pytorch.yaml
+++ b/jobs/climate_pytorch.yaml
@@ -21,20 +21,19 @@ storage:
     container_name: datasets
     mount_dir: /mnt/data
     mount_options: ["--file-cache-timeout-in-seconds=0"]
-  custom_output:
+  results:
     storage_account_name: ramadaanaml
-    container_name: mmvmae-benchmark-results
-    mount_dir: /mnt/data_output
+    container_name: dataloader-benchmark-results
     is_output: True
 
 search:
   job_template:
-    # name: job_{experiment_name:s}_{auto:10s}
     name: climate_{auto:10s}
     sku: G1
     command:
-      - python src/benchmarks/compare_climate.py
+      - python src/benchmarks/climate_pytorch.py
         {data}
+        --benchmark_results_file /mnt/results/climate.csv
         --batch_size {batch_size}
         --num_workers {num_workers}
         --use {use}
