reorganize benchmarks into dataset-wise subdirs; refactor args into common args + dataset args + library args; disable flake8 (#17)

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -119,7 +119,7 @@ stages:
 
       - job: BuildDockerAzureMLBaseAndCondaFfcv
         dependsOn: DefineDockerTags
-        displayName: docker build azureml base
+        displayName: docker build azureml ffcv base
         pool:
           vmImage: $(vmImageName)
         variables:
