recod's encode and decode tested, next test idx for segment which is more complicated

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,4 +26,5 @@
         "--profile",
         "black"
     ],
+    "python.pythonPath": "/datadrive/anaconda3/envs/dataloader-benchmark/bin/python",
 }
