--- a/jobs/climate_ffcv.yaml
+++ b/jobs/climate_ffcv.yaml
@@ -31,7 +31,8 @@ search:
     name: climate_ffcv_{auto:10s}
     sku: G1
     command:
-      - python src/benchmarks/climate_ffcv.py
+      - python src/system_monitor.py --watch_every_n_seconds 1 &
+      - python src/benchmarks/climate/climate_ffcv.py
         --benchmark_results_file /mnt/results/climate.csv
         --beton_file /mnt/data/trial/1.40625/{use}/val.beton
         --batch_size {batch_size}
