--- a/jobs/tartanair_og_search.yaml
+++ b/jobs/tartanair_og_search.yaml
@@ -31,7 +31,8 @@ search:
     name: tartanair_{auto:10s}
     sku: G1
     command:
-      - python src/benchmarks/tartanair_og.py
+      - python src/system_monitor.py --watch_every_n_seconds 1 &
+      - python src/benchmarks/tartanair/tartanair_og.py
         --train_ann_file /mnt/data/tartanair-release1/train_ann_debug_ratnesh.json
         --benchmark_results_file /mnt/results/tartanair_search.csv
         --batch_size {batch_size}
